--- a/package.json
+++ b/package.json
@@ -52,8 +52,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "auto": "^9.10.4",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.5",
+    "identity-obj-proxy": "^3.0.0",
+    "msw": "^2.10.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
